优化 HTML 结构，调整 CSS 样式

--- a/src/@core/scss/_default-layout-w-vertical-nav.scss
+++ b/src/@core/scss/_default-layout-w-vertical-nav.scss
@@ -48,8 +48,7 @@ $header: ".layout-navbar";
       /* ℹ️ Ensure header styles are preserved when dialog is opened,
         but only if window was scrolled before dialog opened
     */
-      html.v-overlay-scroll-blocked &.window-scrolled.layout-navbar-fixed,
-      html.dialog-scroll-locked &.window-scrolled.layout-navbar-fixed {
+      html.v-overlay-scroll-blocked &.window-scrolled.layout-navbar-fixed {
 
         #{$header} {
           padding-inline: 1rem;
